Fix CORS to support wildcard origins with credentials